# homework9

./: README.md
.github/workflows/: workflow9.yaml
data/: inp1_inline.txt  inp2.txt  inp3.txt  test1.sh  test2.sh  test3.sh  test4.sh
src/: CMakeLists.txt  async.cpp  async.h  bulk.cpp  bulk.h  bulk_test.cpp  cmd.h  console_executor.cpp  console_executor.h  exe_dispatcher.cpp  exe_dispatcher.h  executor.cpp  executor.h  file_executor.cpp  file_executor.h  parser.y  scan.l
